--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "glob": "~3.1.14",
     "async": "~0.1.22",
     "send": "~0.1.0",
-    "less": "~1.3.1"
+    "less": "~1.3.1",
+    "fs-extra": "~0.3.1"
   }
 }
