--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "async": "~0.1.22",
     "send": "~0.1.0",
     "less": "~1.3.1",
-    "fs-extra": "~0.3.1"
+    "fs-extra": "~0.3.1",
+    "github-flavored-markdown": "git+ssh://git@github.com:felixge/github-flavored-markdown.git"
   }
 }
