--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "send": "~0.1.0",
     "less": "~1.3.1",
     "fs-extra": "~0.3.1",
-    "github-flavored-markdown": "git+ssh://git@github.com:felixge/github-flavored-markdown.git"
+    "marked": "~0.2.5"
   }
 }
