--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "send": "~0.1.0",
     "less": "~1.3.1",
     "fs-extra": "~0.3.1",
-    "marked": "~0.2.5"
+    "marked": "~0.2.5",
+    "semver": "~1.1.0"
   }
 }
